--- a/css/style.css
+++ b/css/style.css
@@ -34,13 +34,13 @@ ul
     background: var(--bg-black-900);
     min-height: 100vh;
     display: block;
-    position: fixed;
-    left: 270px;
-    left: 0 30px;
-    top: 0;
-    right: 0;
-    z-index: 0;
+    padding: 0 30px;
     opacity: 1;
+}
+.main-content
+{
+    padding-left: 270px;
+    
 }
 .padd-15
 {
@@ -70,12 +70,13 @@ ul
     border-radius: 40px;
     display: inline-block;
     white-space: nowrap;
+    border: none;
     background: var(--skin-color);
     transition: all 0.3s ease;
 }
 .btn:hover
 {
-    transform: scale(1.05s);
+    transform: scale(1.05);
     
 }
 /* aside */
@@ -113,7 +114,7 @@ ul
 .aside .logo a span
 {
     font-family: 'Clicker Script', cursive;
-    font-family: 40px;
+    font-size: 40px;
 
 }
 .aside .logo a::before
@@ -253,7 +254,32 @@ h3.my-profession
     text-align: center;
     position: relative;
 }
+.home-img::after
+{
+    content: '';
+    position: absolute;
+    height: 80px;
+    width: 80px;
+    border-bottom: 10px solid var(--skin-color);
+    border-right: 10px solid var(--skin-color);
+    right: 20px;
+    bottom: -40px;
+}
+.home-img::before
+{
+    content: '';
+    position: absolute;
+    height: 80px;
+    width: 80px;
+    border-top: 10px solid var(--skin-color);
+    border-left: 10px solid var(--skin-color);
+    left: -20px;
+    top: -40px;
+}
 .home .home-img img
 {
-    height: 400px;
+    margin: auto;
+    border-radius: 5px;
+    height: 300px;
+    width: 300px;
 }
