--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,24 @@ body{
     overflow-x: hidden;
     background-color: #f1f1f1;
 }
+.btn
+{
+    font-size: 16px;
+    font-weight: 500;
+    padding: 12px 35px;
+    color: white;
+    border-radius: 40px;
+    display: inline-block;
+    white-space: nowrap;
+    border: none;
+    background: red;
+    transition: all 0.3s ease;
+}
+.btn:hover
+{
+    transform: scale(1.05);
+  
+}
 /* Start Aside Section */
 .aside{
     width: 270px;
@@ -550,6 +568,8 @@ body{
 }
 .services .services-item p{
     font-size: 15px;
+    font-weight: 600;
+    text-align: ;
     transition: all .4s ease;
 }
 .services .services-item:hover .title,
