--- a/css/style.css
+++ b/css/style.css
@@ -381,6 +381,7 @@ body{
 }
 .about .about-info .btn{
     margin: 30px 10px 0 0;
+    text-align: center;
     font-size: 16px;
     font-weight: 500;
     border-radius: 40px;
@@ -393,7 +394,7 @@ body{
     width: 130px;
 }
 .about .about-info .btn2{
-    width: 110px;
+    width: 120px;
 }
 .about .about-info .btn:hover
 {
