--- a/css/style.css
+++ b/css/style.css
@@ -4,16 +4,111 @@
     @import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700&display=swap');
     @import url('https://fonts.googleapis.com/css?family=Rubik:500,700,900&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Clicker+Script&family=Poppins:wght@200;300;500;600;700&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+    * {
+        margin: 0;
+        padding: 0;
+        outline: none;
+        text-decoration: none;
+        box-sizing: border-box;
+      }
+      
+      ::before,
+      ::after {
+        box-sizing: border-box;
+      }
+      
+      .section {
+        background-color: #f2f2fc;
+        min-height: 100vh;
+        display: block;
+        padding: 0 30px;
+        position: fixed;
+        left: 270px;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        overflow-x: hidden;
+        overflow-y: auto;
+        z-index: 0;
+        opacity: 1;
+        -webkit-transition: all 0.3s ease;
+        transition: all 0.3s ease;
+      }
+      
+      .section.back-section {
+        z-index: 1;
+      }
+      .section.active {
+        opacity: 1;
+        z-index: 2;
+        -webkit-animation: slideSection 1s ease;
+        animation: slideSection 1s ease;
+      }
 body{
     font-family: Montserrat, sans-serif;
     overflow-x: hidden;
     background-color: #f1f1f1;
 }
+.section .container {
+    padding-top: 60px;
+    padding-bottom: 70px;
+  }
+.section-title {
+    -ms-flex: 0 0 100%;
+    flex: 0 0 100%;
+    max-width: 100%;
+    margin-bottom: 60px;
+  }
+  .section-title h2 {
+    font-size: 40px;
+    color: #302e4d;
+    font-family: "Rubik", sans-serif;
+    font-weight: 700;
+    margin: 0;
+    position: relative;
+  }
+  .section-title h2::before {
+    content: "";
+    height: 4px;
+    width: 50px;
+    position: absolute;
+    top: 100%;
+    left: 0;
+  }
+  .section-title h2::after {
+    content: "";
+    height: 4px;
+    width: 25px;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    margin-top: 8px;
+  }
+.row {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: -15px;
+    position: relative;
+  }
+  .padd-15 {
+    padding-right: 15px;
+    padding-left: 15px;
+  }
+  .container {
+    max-width: 1100px;
+    margin: auto;
+    width: 100%;
+  }
+  .shadow-dark {
+    -webkit-box-shadow: 0 0 20px rgba(48, 46, 77, 0.15);
+    box-shadow: 0 0 20px rgba(48, 46, 77, 0.15);
+  }
+.hidden {
+    display: none !important;
+  }
 .btn
 {
     font-size: 16px;
@@ -776,51 +871,84 @@ body{
 }
 /* Portofolio Section End */
 
+/* blog */
 
-.blog{
-    padding: 50px;
-}
-.blog .blog-title{
-    margin-bottom: 40px;
-    position: relative;
-    font-family: Rubik, sans-serif;
-    color: #302e4d;
-}
-.blog .blog-title::before{
-    content: "";
-    position: absolute;
-    top: 40px;
-    left: 0;
-    width: 6%;
-    height: 3px;
-}
-.blog .blog-title::after{
-    content: "";
-    position: absolute;
-    top: 50px;
-    left: 0;
-    width: 3%;
-    height: 3px;
-}
-.blog .blog-item .blog-date{
-    position: absolute;
-    top: 150px;
-    left: 15px;
-    color: #fff;
-    padding: 5px 10px;
+.blog .container {
+    padding-bottom: 40px;
+  }
+  
+  .blog .blog-item {
+    -ms-flex: 0 0 33.33%;
+    flex: 0 0 33.33%;
+    max-width: 33.33%;
+    margin-bottom: 30px;
+  }
+  .blog .blog-item-inner {
     border-radius: 5px;
-    font-size: 12px;
-}
-.card{
-    margin-top: 30px;
-}
-.blog .blog-item .tags{
-    font-size: 15px;
-}
-.blog .blog-item .tags span{
-    font-weight: 500;
-}
-
+    overflow: hidden;
+    border: 1px solid #d4d4e3;
+    cursor: pointer;
+  }
+  .blog .blog-item-inner .blog-img {
+    position: relative;
+    overflow: hidden;
+  }
+  .blog .blog-item-inner .blog-img img {
+    width: 100%;
+    display: block;
+    -webkit-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+  }
+  
+  .blog .blog-item-inner:hover .blog-img img {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+    cursor: pointer;
+  }
+  
+  .blog .blog-item-inner .blog-img .blog-date {
+    position: absolute;
+    padding: 4px 10px;
+    border-radius: 5px;
+    color: white;
+    font-weight: 600;
+    font-size: 14px;
+    left: 15px;
+    bottom: 15px;
+    cursor: pointer;
+  }
+  .blog .blog-item-inner .blog-info {
+    padding: 30px 15px;
+    background-color: #fdf9ff;
+  }
+  
+  .blog .blog-item-inner .blog-info .blog-title {
+    font-size: 18px;
+    font-weight: 700;
+    color: #302e4d;
+    text-transform: capitalize;
+    margin-bottom: 10px;
+  }
+  .blog .blog-item-inner .blog-info .blog-description {
+    font-size: 16px;
+    line-height: 25px;
+    color: #504e70;
+    font-weight: 600;
+    margin-bottom: 15px;
+  }
+  
+  .blog .blog-item-inner .blog-info .blog-tags {
+    font-size: 16px;
+    line-height: 25px;
+    color: #504e70;
+    font-weight: 400;
+    text-transform: capitalize;
+  }
+  .blog .blog-item-inner .blog-info .blog-tags a {
+    text-decoration: none;
+    font-weight: 700;
+  }
+  
 /* Contact Section Start */
 .contact{
     padding: 50px;
@@ -859,6 +987,7 @@ body{
 }
 .contact .contact-item p{
     font-size: 15px;
+    font-weight: 600;
     opacity: .7;
 }
 .contact .input-group{
