--- a/css/style.css
+++ b/css/style.css
@@ -990,6 +990,12 @@ body{
     font-weight: 600;
     opacity: .7;
 }
+.contact .contact-item a{
+    color: black;
+    font-size: 15px;
+    font-weight: 700;
+    opacity: .7;
+}
 .contact .input-group{
     margin-top: 20px;
 }
